# SWCDev

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: Rust.yml
Source/: main.rs
Source/plugin/: init.rs  mod.rs  upgrade_deps.rs
Source/plugin/package/: mod.rs  package_json.rs
Source/plugin/publish/: base.rs  mod.rs
Source/util/: mod.rs
Source/util/cargo/: add.rs  mod.rs  upgrade.rs
Source/util/node/: mod.rs  platform.rs
arch/: Cargo.toml
arch/Source/: lib.rs
templates/new-plugin/: .gitignore  Cargo.toml
