[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Node js architectures to rust target triple"
documentation = "https://rustdoc.swc.rs/swc_node_arch/"
edition = "2018"
license = "Apache-2.0/MIT"
name = "swc_node_arch"
repository = "https://github.com/swc-project/swc.git"
version = "0.1.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
string_enum = "0.3.1"
